# fortune

./: License  Makefile  README.md  setup.cfg
man/: fortune.6
src/fortune/: Makefile  __init__.py  main.py
