[metadata]
name = pnu-fortune
description = print a random, hopefully interesting, adage
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.1
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/fortune/
project_urls =
    Bug Tracker = https://github.com/HubTou/fortune/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Fortune Cookies
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    fortunes-freebsd-classic
    fortunes-python
    fortunes-unix

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fortune = fortune:main

[options.data_files]
man/man6 = 
    man/fortune.6.gz

